--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -36,7 +36,7 @@ env:
 jobs:
   build:
     runs-on: ubuntu-22.04
-
+    timeout-minutes: 600
     steps:
     - name: Checkout
       uses: actions/checkout@main
